machine learning added in backend...

--- a/memeDetection/memeDetection.ipynb
+++ b/memeDetection/memeDetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "test_images/cat.jpg\n",
       "Meme\n"
      ]
     }
@@ -68,6 +69,7 @@
    "source": [
     "# Getting images from the test_images and testing\n",
     "f = 'test_images/cat.jpg'\n",
+    "print(f)\n",
     "img = image.load_img(f, target_size=(224, 224))\n",
     "x = image.img_to_array(img)\n",
     "x = np.expand_dims(x, axis=0)\n",
